# flatlined

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: flat.conf  flatconf.rs  ipc.rs  main.rs
src/ipc/: lib.rs
