[package]
name = "flatlined"
version = "0.1.0"
authors = ["Jan S."]

[dependencies]
toml = "0.4.1"
clap = "2.25.0"
serde = "1.0.8"
serde_derive = "1.0.8"
daemonizer = "0.3.4"
log = "0.3.6"
env_logger = "0.4.3"
nix = "0.7.0"
nanomsg = "0.6.1"
blake2-rfc = "0.2.17"
constant_time_eq = "0.1.2"
quickcheck = "0.4.1"

[lib]
name = "ipc"
path = "src/ipc/lib.rs"

[[bin]]
name = "flatlined"
path = "src/flatlined/bin/main.rs"

[[bin]]
name = "flatctl"
path = "src/flatctl/bin/main.rs"
