[package]
name = "flatlined"
version = "0.1.0"
authors = ["Jan S."]

[dependencies]
toml = "0.4.5"
clap = "2.29.4"
serde = "1.0.27"
serde_derive = "1.0.27"
log = "0.4.1"
env_logger = "0.5.3"
nix = "0.10.0"
nanomsg = "0.6.2"
blake2-rfc = "0.2.18"
constant_time_eq = "0.1.3"
quickcheck = "0.6.1"
trust-dns-resolver = "0.8.0"

[lib]
name = "ipc"
path = "src/ipc/lib.rs"

[[bin]]
name = "flatlined"
path = "src/flatlined/bin/main.rs"

[[bin]]
name = "flatctl"
path = "src/flatctl/bin/main.rs"
